plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
    maven {
        name = 'hypixel'
        url = 'https://repo.hypixel.net/repository/Hypixel/'
    }
    //Auto updater
    maven {
        name = 'Autoupdater'
        url = 'https://repo.nea.moe/releases'
    }
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.terraformersmc.com/releases/" }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    implementation("net.hypixel:mod-api:1.0.1")
    include(modImplementation("moe.nea:libautoupdate:1.3.1") {
        exclude group: 'com.google.code.gson', module: 'gson'
    })
    include(implementation('com.esotericsoftware:kryonet:2.22.0-RC1'))

    //Specified here to make loom include it, using shading is a pain since there are many library provided by fabric
    include(implementation("com.esotericsoftware:jsonbeans:0.7"))
    include(implementation('com.esotericsoftware.kryo:kryo:2.24.0'))
    // Use the version used in https://mvnrepository.com/artifact/com.esotericsoftware.kryo/kryo/2.24.0/dependencies
    include(implementation("org.objenesis:objenesis:2.1"))
    include(implementation("com.esotericsoftware.minlog:minlog:1.2"))

    include(modImplementation("me.shedaniel.cloth:cloth-config-fabric:20.0.149"))
    include(modImplementation("com.terraformersmc:modmenu:16.0.0"))

    //lombok (to generate code at compile time)
    compileOnly("org.projectlombok:lombok:1.18.42")
    annotationProcessor("org.projectlombok:lombok:1.18.42")
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}"}
    }
}

//The fabric templates adds the publication task here
